trunk/Archive2/07/d34b630831e04b/output
main.cpp: In function 'int main()':
main.cpp:13:66: error: 'type' in 'class std::result_of<int (*)()>' does not name a type
     using result_type = typename std::result_of<decltype(&foo)>::type;
                                                                  ^
